vlib/v/checker/tests/fn_check_for_matching_option_result_in_fields.vv
struct Abc {
	f fn (voidptr)
}

fn main() {
	a := Abc{
		f: fn (data voidptr) ? {}
	}
	println(a)
}
